# ENIAT

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
eniat/: ENIAT.code-workspace  _dyn.py  eniat.py  entry.py
eniat/base/: __init__.py  base.py  grader.py
eniat/config/: default.yaml  eniat.yaml  example.yaml  fullconfig.yml  fullconfig_example.yml  init_env.yaml
eniat/config/grade/: default_grade.yaml
eniat/config/grader/: default_grade.yaml  default_grader.yaml
eniat/config/grader/loader/: default_loader.yaml
eniat/config/grader/scheme/: default_scheme.yaml
eniat/config/learner/: default_learner.yaml
eniat/config/learner/model/: default_model.yaml
eniat/config/log/: default_logger.yaml
eniat/config/logger/: default_logger.yaml
eniat/config/logger/mlflow/: default_mlflow.yaml
eniat/config/trainer/: default_trainer.yaml
eniat/config/trainer/distributed/: default_distributed.yaml
eniat/config/trainer/scheme/: default_scheme.yaml
eniat/core/: __init__.py  base.py  course.py
eniat/data/: __init__.py  course.py
eniat/learner/: base.py  huggingface.py  scikitlearner.py  sklearn.py  torch.py  torchlearner.py
eniat/pytorch/: __init__.py  conf.py  learner.py  trainer.py
eniat/scikit/: __init__.py  grader.py  learner.py
eniat/torch/: __init__.py  base.py  conf.py  grader.py  learner.py  predictor.py  scheduler.py  trainer.py
eniat/trainer/: BaseTrainer.py  TorchTrainer.py  base.py  torch.py
eniat/utils/: __init__.py  cli.py  conf.py  grader.py  manager.py  statelogger.py  style.py  torchtypes.py  totallog.py
example/: torchrun.py  total_config.yaml
example/config/: ddp_example.yaml  torch_example.yaml
example/data/: test_data.py
src/eniat/config/: nocolor.yaml
src/eniat/pytorch/: learner.py  trainer.py
src/eniat/scikit/: __init__.py  learner.py
src/eniat/utils/: cli.py
test/: model_torch.py
test/configs/: torch_ddp_eval.yaml  torch_ddp_infer.yaml  torch_ddp_train.yaml
