[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eniat"
version = "0.0.0"
license = {file = "LICENSE"}
authors = [
    {name = "GimmeSpoon", email="skcjfdnd1996@gmail.com"}
]
description = "ENIAT supports and boosts your machine learning experiments!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "omegaconf",
    "openpyxl",
    "numpy",
    "rich[jupyter]",
    "importlib_resources",
]

[project.urls]
"Homepage" = "https://github.com/GimmeSpoon/ENIAT"
"Bug Tracker" = "https://github.com/GimmeSpoon/ENIAT/issues"
"Repository" = "https://github.com/GimmeSpoon/ENIAT"

[project.scripts]
eniat = "eniat.entry:console"
