[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eniat"
version = "0.0.2"
license = {file = "LICENSE"}
authors = [
    {name = "Cheol Woong Na", email="skcjfdnd1996@gmail.com"}
]
description = "ENIAT supports and boosts your machine learning experiments!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "omegaconf",
    "openpyxl",
    "numpy",
    "rich[jupyter]",
    "importlib_resources",
]

[project.urls]
"Homepage" = "https://github.com/GimmeSpoon/ENIAT"
"Bug Tracker" = "https://github.com/GimmeSpoon/ENIAT/issues"
"Repository" = "https://github.com/GimmeSpoon/ENIAT"

[project.scripts]
eniat = "eniat.entry:console"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
